<resources>
    <string name="app_name">E-Shop</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>